hphp/hack/test/typecheck/nested_key_existence_inside_coalesce.php
<?hh

<<__EntryPoint>>
function main(): void {
  $s = shape('a' => shape('b' => 42));
  $a = $s['c']['b'] ?? 42;
}
